Alteração de chamada daas views; Importação AutoMapper; Criação AutoMapperConfig na App_Start; Alteração Global.asax;

--- a/Montadora.Veiculos.Web/Views/Montadoras/Delete.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Montadoras.Veiculos.Dominio.Montadora
+﻿@model Montadoras.Veiculos.Web.ViewModels.Montadora.MontadoraIndexViewModel
 
 @{
     ViewBag.Title = "Delete";
