--- a/Montadora.Veiculos.Web/Views/Montadoras/Index.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Montadoras.Veiculos.Dominio.Montadora>
+﻿@model IEnumerable<Montadoras.Veiculos.Web.ViewModels.Montadora.MontadoraIndexViewModel>
 
 @{
     ViewBag.Title = "Index";
