--- a/Montadora.Veiculos.Web/Views/Veiculos/Details.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Montadoras.Veiculos.Dominio.Veiculo
+﻿@model Montadoras.Veiculos.Web.ViewModels.Veiculo.VeiculoIndexViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Montadora.Nome)
+            @Html.DisplayNameFor(model => model.IdMontadora)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Montadora.Nome)
+            @Html.DisplayFor(model => model.IdMontadora)
         </dd>
 
         <dt>
