--- a/Montadora.Veiculos.Web/Views/Veiculos/Index.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Montadoras.Veiculos.Dominio.Veiculo>
+﻿@model IEnumerable<Montadoras.Veiculos.Web.ViewModels.Veiculo.VeiculoIndexViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Montadora.Nome)
+            @Html.DisplayNameFor(model => model.IdMontadora)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Modelo)
@@ -26,7 +26,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Montadora.Nome)
+            @Html.DisplayFor(modelItem => item.IdMontadora)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Modelo)
