ViewModels Montadora e Veiculo criadas; AutoMapper  e AutoMapperConfig alteradas; Alteração do Profile: altera exibição das labels; Controller Montadora alterada

--- a/Montadora.Veiculos.Web/Views/Montadoras/Edit.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@model Montadoras.Veiculos.Dominio.Montadora
-
+﻿@model Montadoras.Veiculos.Web.ViewModels.Montadora.MontadoraViewModel
 @{
     ViewBag.Title = "Edit";
 }
