--- a/Montadora.Veiculos.Web/Views/Veiculos/Edit.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Montadoras.Veiculos.Dominio.Veiculo
+﻿@model Montadoras.Veiculos.Web.ViewModels.Veiculo.VeiculoViewModel
 
 @{
     ViewBag.Title = "Edit";
