Annnotations criada; adição do atributo CNPJMontadora; Alt TypeConfiguration; DB alterado - acrescentado o cnpj; Acrescentada prop nas views;

--- a/Montadora.Veiculos.Web/Views/Montadoras/Details.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Details.cshtml
@@ -34,6 +34,14 @@
             @Html.DisplayFor(model => model.MercadoPaises)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CNPJMontadora)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CNPJMontadora)
+        </dd>
+
     </dl>
 </div>
 <p>
