--- a/Montadora.Veiculos.Web/Views/Montadoras/Delete.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja apagar este item?</h3>
 <div>
     <h4>Montadora</h4>
     <hr />
@@ -33,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.MercadoPaises)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CNPJMontadora)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CNPJMontadora)
         </dd>
 
     </dl>
