--- a/Montadora.Veiculos.Web/Views/Montadoras/Index.cshtml
+++ b/Montadora.Veiculos.Web/Views/Montadoras/Index.cshtml
@@ -20,26 +20,32 @@
         <th>
             @Html.DisplayNameFor(model => model.MercadoPaises)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CNPJMontadora)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nacionalidade)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MercadoPaises)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nacionalidade)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.MercadoPaises)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CNPJMontadora)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+</tr>
 }
 
 </table>
