--- a/Montadora.Veiculos.Web/Views/Veiculos/Create.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Create.cshtml
@@ -34,7 +34,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdMontadora, "IdMontadora", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdMontadora", null, htmlAttributes: new { @class = "form-control" })
+
+                @Html.DropDownListFor(Model => Model.IdMontadora, (SelectList)ViewBag.DropDownMontadoras, new { @class = "form-control" })
+
+
+
                 @Html.ValidationMessageFor(model => model.IdMontadora, "", new { @class = "text-danger" })
             </div>
         </div>
