Alteração das classes VeiculoIndexViewModel, DominioParaViewModelProfile; Delete, Details e Index; Classe VeiiculosController Alterada; Alterada classe Create(veiculos).cshtmml; Alterada classe  Edit(veiculos)cshtml;

--- a/Montadora.Veiculos.Web/Views/Veiculos/Delete.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.IdMontadora)
+            @Html.DisplayNameFor(model => model.NomeMontadora)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IdMontadora)
+            @Html.DisplayFor(model => model.NomeMontadora)
         </dd>
 
         <dt>
