--- a/Montadora.Veiculos.Web/Views/Veiculos/Create.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Create.cshtml
@@ -35,7 +35,7 @@
             @Html.LabelFor(model => model.IdMontadora, "IdMontadora", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
 
-                @Html.DropDownListFor(Model => Model.IdMontadora, (SelectList)ViewBag.DropDownMontadoras, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.IdMontadora, (SelectList)ViewBag.DropDownMontadoras, new { @class = "form-control" })
 
 
 
