--- a/Montadora.Veiculos.Web/Views/Veiculos/Edit.cshtml
+++ b/Montadora.Veiculos.Web/Views/Veiculos/Edit.cshtml
@@ -37,7 +37,7 @@
             @Html.LabelFor(model => model.IdMontadora, "IdMontadora", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
 
-                @Html.DropDownListFor(Model => Model.IdMontadora, (SelectList)ViewBag.DropDownMontadoras, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.IdMontadora, (SelectList)ViewBag.DropDownMontadoras, new { @class = "form-control" })
 
                 @Html.ValidationMessageFor(model => model.IdMontadora, "", new { @class = "text-danger" })
             </div>
