Alterados os Controllers Home, Montadoras, Usuarios e Veiculos; Instalaldos os paacotes Identity.Entity e IdentiityOwin(commit anterior), Microsoft.Owin; Alterado o _Layout(Shared); Alterado o Site.css(Content); Validação de emails: Criada classe EmailAttributes(Annotations);

--- a/Montadora.Veiculos.Web/Content/Site.css
+++ b/Montadora.Veiculos.Web/Content/Site.css
@@ -22,3 +22,8 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse .navbar-nav > li > p {
+    color: #FFFFFF !important;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
